testing/stage_12/valid/char_returning_function.c
char c(int a)
{
	return a;
}

int main() 
{
	return c(-10);
}