testing/stage_12/invalid/pointer_char.c
int main() 
{
	*char a=2;
	return 2;
}